--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 * {
   background-color: purple;
+  text-align: center;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+}
+
+.container {
+  align-content: center;
+  color: pink;
+  margin-top: 30vh;
 }
